--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="pingback" href="xmlrpc.php">
 	
 	<!-- This site is optimized with the Yoast SEO plugin v14.4.1 - https://yoast.com/wordpress/plugins/seo/ -->
-	<title>Home - Jaxify Software</title>
+	<title>Daniël Van Stryp CV</title>
 	<meta name="robots" content="index, follow" />
 	<meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
 	<meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
